# pibic-cti

./: .gitignore  CONTRIBUTING.md  PIBIC.md  README.md  ROADMAP.md  diretorios.txt  filetree.txt  frames_2025-12-17_11.29.29.gv  git_log.txt  main.tex  pyproject.toml  requirements.txt  visualize_ros_graph.py  warehouse.pgm  warehouse.yaml
pocs/agent/: agent.py  test_api.py
pocs/camera/: vision_webcam.py
pocs/nav2/: teleop_.py
pocs/rviz/launch/: demo.launch.py  old.py
pocs/rviz/resource/: simulation.sdf  tugbot_warehouse.sdf
pocs/rviz/simulation/: state_publisher.py
pocs/rviz/urdf/: r2d2.rviz  r2d2.urdf.xml  tugbot.urdf.xml
src/: pyproject.toml
src/graph/tools/: __init__.py  calculation.py  log.py  others.py  ros2.py
src/raia_cognicao/raia_fala/: Assistente_kokoro_think_tratado_v2.py  assistente_kokoro.py  teste.py
src/robot_agent/: package.xml  setup.py
src/robot_bringup/: package.xml  setup.py
src/robot_description/: package.xml  setup.py
src/robot_perception/: package.xml  setup.py
src/robot_sim/: package.xml  setup.py
src/robot_speech/: package.xml  setup.py
src/robot_speech/launch/: speech.launch.py
src/robot_speech/robot_speech/: stt_node.py  tts_node.py
src/senses/: listen.py  speech.py  talk.py  text.py  think.py  tools.py  vision.py
src/simulation/: package.xml  setup.py
