[project]
name = "projeto-raia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb-client>=1.1.1",
    "display>=1.0.0",
    "dotenv>=0.9.9",
    "faster-whisper>=1.2.0",
    "hf-xet>=1.1.10",
    "ipython>=9.6.0",
    "kokoro>=0.9.4",
    "langchain>=1.0.2",
    "langchain-anthropic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.1",
    "langchain-google-genai>=3.0.0",
    "langchain-groq>=1.0.0",
    "langchain-huggingface>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "numba>=0.62.1",
    "numpy>=2.2.6",
    "ollama>=0.6.0",
    "openai>=2.6.0",
    "openai-whisper>=20250625",
    "opencv-python-headless>=4.12.0.88",
    "pip>=25.2",
    "pyaudio>=0.2.14",
    "pyenv-win>=3.1.1",
    "python-dotenv>=1.1.1",
    "pyttsx3>=2.99",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.3",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "vosk>=0.3.45",
    "whisper>=1.1.10",
]
