[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "display>=1.0.0",
    "dotenv>=0.9.9",
    "faster-whisper>=1.2.0",
    "hf-xet>=1.1.10",
    "ipython>=9.6.0",
    "kokoro>=0.9.4",
    "pip>=25.2",
    "pyaudio>=0.2.14",
    "pyenv-win>=3.1.1",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.3",
    "whisper>=1.1.10",
]
