<?xml version="1.0"?>
<package format="3">
  <name>robot_speech</name>
  <version>0.0.0</version>
  <description>Nós de STT e TTS para o robô</description>
  <maintainer email="isaac052503@gmail.com">isaac</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
